--- a/Calculator Layout iOS13/View/Main.storyboard
+++ b/Calculator Layout iOS13/View/Main.storyboard
@@ -18,7 +18,7 @@
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="top" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="zoD-L2-Rw1">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.69999999999999996" translatesAutoresizingMaskIntoConstraints="NO" id="gC2-i9-XzD">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="40" translatesAutoresizingMaskIntoConstraints="NO" id="gC2-i9-XzD">
                                         <rect key="frame" x="0.0" y="0.0" width="367" height="110.5"/>
                                         <edgeInsets key="layoutMargins" top="8" left="8" bottom="8" right="20"/>
                                         <fontDescription key="fontDescription" type="system" weight="light" pointSize="60"/>
@@ -36,7 +36,7 @@
                                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </state>
                                                 <connections>
-                                                    <action selector="clearButton:" destination="ey4-0b-agg" eventType="touchUpInside" id="y2E-kO-IMx"/>
+                                                    <action selector="clearButton:" destination="ey4-0b-agg" eventType="touchUpInside" id="3sw-QA-5M4"/>
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ros-cP-dSM">
@@ -47,7 +47,7 @@
                                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </state>
                                                 <connections>
-                                                    <action selector="signalButton:" destination="ey4-0b-agg" eventType="touchUpInside" id="KNR-Vl-ttf"/>
+                                                    <action selector="signalButton:" destination="ey4-0b-agg" eventType="touchUpInside" id="EJ0-6M-kHh"/>
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ghE-zu-oK9">
@@ -58,7 +58,7 @@
                                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </state>
                                                 <connections>
-                                                    <action selector="percentageButton:" destination="ey4-0b-agg" eventType="touchUpInside" id="vds-AY-sQa"/>
+                                                    <action selector="percentageButton:" destination="ey4-0b-agg" eventType="touchUpInside" id="vqh-Hz-FZI"/>
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="G64-9b-ycy">
@@ -69,7 +69,7 @@
                                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </state>
                                                 <connections>
-                                                    <action selector="divideButton:" destination="ey4-0b-agg" eventType="touchUpInside" id="Vwd-jJ-0Oq"/>
+                                                    <action selector="operationButton:" destination="ey4-0b-agg" eventType="touchUpInside" id="Tf8-Hv-wEz"/>
                                                 </connections>
                                             </button>
                                         </subviews>
@@ -85,7 +85,7 @@
                                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </state>
                                                 <connections>
-                                                    <action selector="sevenButton:" destination="ey4-0b-agg" eventType="touchUpInside" id="WdU-ee-P8B"/>
+                                                    <action selector="digitButton:" destination="ey4-0b-agg" eventType="touchUpInside" id="uMF-ep-kE8"/>
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="a4f-FD-ABr">
@@ -96,7 +96,7 @@
                                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </state>
                                                 <connections>
-                                                    <action selector="eightButton:" destination="ey4-0b-agg" eventType="touchUpInside" id="5bx-FM-Rgg"/>
+                                                    <action selector="digitButton:" destination="ey4-0b-agg" eventType="touchUpInside" id="i3g-ig-Z6h"/>
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="O2M-Zh-IbB">
@@ -107,7 +107,7 @@
                                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </state>
                                                 <connections>
-                                                    <action selector="nineButton:" destination="ey4-0b-agg" eventType="touchUpInside" id="lKe-LD-uMZ"/>
+                                                    <action selector="digitButton:" destination="ey4-0b-agg" eventType="touchUpInside" id="ZZc-bJ-XXJ"/>
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DbC-GJ-p5L">
@@ -118,7 +118,7 @@
                                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </state>
                                                 <connections>
-                                                    <action selector="multButton:" destination="ey4-0b-agg" eventType="touchUpInside" id="63V-LQ-uVS"/>
+                                                    <action selector="operationButton:" destination="ey4-0b-agg" eventType="touchUpInside" id="b0c-cP-bWx"/>
                                                 </connections>
                                             </button>
                                         </subviews>
@@ -134,7 +134,7 @@
                                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </state>
                                                 <connections>
-                                                    <action selector="fourButton:" destination="ey4-0b-agg" eventType="touchUpInside" id="NHe-cX-A0V"/>
+                                                    <action selector="digitButton:" destination="ey4-0b-agg" eventType="touchUpInside" id="Sgs-UU-ti8"/>
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TwX-aA-DqI">
@@ -145,7 +145,7 @@
                                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </state>
                                                 <connections>
-                                                    <action selector="fiveButton:" destination="ey4-0b-agg" eventType="touchUpInside" id="xjl-Dm-tJa"/>
+                                                    <action selector="digitButton:" destination="ey4-0b-agg" eventType="touchUpInside" id="Beg-jC-Asr"/>
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ckH-do-hyL">
@@ -156,7 +156,7 @@
                                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </state>
                                                 <connections>
-                                                    <action selector="sixButton:" destination="ey4-0b-agg" eventType="touchUpInside" id="Ddc-14-ij3"/>
+                                                    <action selector="digitButton:" destination="ey4-0b-agg" eventType="touchUpInside" id="eLq-Sv-T0p"/>
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wKr-Ro-rCd">
@@ -167,7 +167,7 @@
                                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </state>
                                                 <connections>
-                                                    <action selector="minusButton:" destination="ey4-0b-agg" eventType="touchUpInside" id="mIc-WT-qXg"/>
+                                                    <action selector="operationButton:" destination="ey4-0b-agg" eventType="touchUpInside" id="5NB-8h-yzL"/>
                                                 </connections>
                                             </button>
                                         </subviews>
@@ -183,7 +183,7 @@
                                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </state>
                                                 <connections>
-                                                    <action selector="oneButton:" destination="ey4-0b-agg" eventType="touchUpInside" id="8t3-UG-4Pg"/>
+                                                    <action selector="digitButton:" destination="ey4-0b-agg" eventType="touchUpInside" id="os6-sm-k5J"/>
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="52o-xb-7oN">
@@ -194,7 +194,7 @@
                                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </state>
                                                 <connections>
-                                                    <action selector="twoButton:" destination="ey4-0b-agg" eventType="touchUpInside" id="is6-Am-7Xh"/>
+                                                    <action selector="digitButton:" destination="ey4-0b-agg" eventType="touchUpInside" id="TSe-zz-FCb"/>
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mJR-YF-RJR">
@@ -205,7 +205,7 @@
                                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </state>
                                                 <connections>
-                                                    <action selector="threeButton:" destination="ey4-0b-agg" eventType="touchUpInside" id="zfS-sY-1El"/>
+                                                    <action selector="digitButton:" destination="ey4-0b-agg" eventType="touchUpInside" id="RDc-02-zVr"/>
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fBd-7N-tqa">
@@ -216,7 +216,7 @@
                                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </state>
                                                 <connections>
-                                                    <action selector="plusButton:" destination="ey4-0b-agg" eventType="touchUpInside" id="dXu-oK-DTg"/>
+                                                    <action selector="operationButton:" destination="ey4-0b-agg" eventType="touchUpInside" id="Pz6-aZ-PMO"/>
                                                 </connections>
                                             </button>
                                         </subviews>
@@ -232,7 +232,7 @@
                                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </state>
                                                 <connections>
-                                                    <action selector="zeroButton:" destination="ey4-0b-agg" eventType="touchUpInside" id="Whc-h6-w0u"/>
+                                                    <action selector="digitButton:" destination="ey4-0b-agg" eventType="touchUpInside" id="P1z-DH-QNs"/>
                                                 </connections>
                                             </button>
                                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="Qmu-sB-ex4">
@@ -246,7 +246,7 @@
                                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         </state>
                                                         <connections>
-                                                            <action selector="pointButton:" destination="ey4-0b-agg" eventType="touchUpInside" id="EY8-WD-0KE"/>
+                                                            <action selector="digitButton:" destination="ey4-0b-agg" eventType="touchUpInside" id="zQt-4G-Tkp"/>
                                                         </connections>
                                                     </button>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FGk-T1-huW">
@@ -257,7 +257,7 @@
                                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         </state>
                                                         <connections>
-                                                            <action selector="equalButton:" destination="ey4-0b-agg" eventType="touchUpInside" id="GLi-aF-Q2t"/>
+                                                            <action selector="equalButton:" destination="ey4-0b-agg" eventType="touchUpInside" id="K9k-ac-pG3"/>
                                                         </connections>
                                                     </button>
                                                 </subviews>
